<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gris"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/azul_653"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        />

    <androidx.cardview.widget.CardView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        android:layout_margin="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp">

            </androidx.cardview.widget.CardView>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:scaleType="center"
                android:src="@drawable/diseoin1"


                />

            <TextView
                android:layout_width="344dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:maxLines="1"
                android:text="@string/diseno_interiores"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/purple_700"
                android:textSize="15sp"


                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto"
                android:textColor="@color/gris_9c"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:maxLines="3"

                />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="5dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:src="@drawable/comuni"
                    android:scaleType="center"

                    />

            </androidx.cardview.widget.CardView>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comunicacion_audiovisual"
                android:textColor="@color/purple_700"
                android:textStyle="bold"
                android:textSize="15sp"
                android:maxLines="1"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto"
                android:textColor="@color/gris_9c"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:maxLines="3"
                />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:scaleType="center"
                    android:src="@drawable/regalos1"

                    />
            </androidx.cardview.widget.CardView>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ideas_regalos"
                android:textColor="@color/purple_700"
                android:textSize="15sp"
                android:textStyle="bold"
                android:maxLines="1"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto"
                android:textColor="@color/gris_9c"
                android:maxLines="3"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                />

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>